fix text wrap in columns

--- a/web/hub/index.css
+++ b/web/hub/index.css
@@ -1,5 +1,6 @@
 /* Base Styles */
 body {
+    border: 0;
     margin: 0;
     padding: 10px;
     display: flex;
@@ -51,8 +52,13 @@ div {
     grid-template-columns: 3fr 2fr 3fr 1fr 1fr 2fr 1fr;
 }
 
+/* Organization List Div */
+#org-list > div {
+  display: contents;
+}
+
 /* Organization List Data Hover Effect */
-#org-list > div > .data:hover > label {
+#org-list > .data:hover > label {
     cursor: pointer;
     background-color: #ddd;
     padding: 2px 4px;
@@ -60,31 +66,42 @@ div {
 }
 
 /* Organization List Head Label */
-#org-list > div > .head > label {
-    font-weight: bold;
+#org-list > .head > label {
+  padding: 5px;
+  background-color: #555; 
+  border: 1px solid #eee;
+  border-radius: 5px;
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 /* Organization List Data Label */
-#org-list > div > .data > label {
-    color: #555;
+#org-list > .data > label {
+  padding: 5px;
+  background-color: whitesmoke; 
+  border: 1px solid #ddd;
+  white-space: nowrap;
 }
 
 /* Organization List Actions Section */
 #org-list > div > .actions {
-    display: flex;
-    justify-content: flex-end;
+  display: flex;
+  flex-direction: row;
+  gap: 5x;
 }
 
 /* Organization List Actions Button */
 #org-list > div > .actions button {
-    padding: 5px 10px;
-    background-color: #0066cc;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+  flex-grow: 1;
+  padding: 5px 10px;
+  background-color: #0066cc;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-#org-list > div > .actions button:hover {
+#org-list > .actions button:hover {
     background-color: #004d99;
 }
